Updated upstream url

--- a/shades-of-purple.conf
+++ b/shades-of-purple.conf
@@ -3,7 +3,7 @@
 ## name: Shades of Purple
 ## license: MIT
 ## author: Saif Shahriar
-## upstream: 
+## upstream: https://raw.githubusercontent.com/saifshahriar/shades-of-purple-kitty/master/shades-of-purple.conf
 
 background #1E1E3F
 foreground #FFFFFF
